--- a/Good-Eatin/src/app/app.component.html
+++ b/Good-Eatin/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header title='Good Eatin' loggedIn="false"></app-header>
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
@@ -19,3 +20,5 @@
 </ul>
 
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
