--- a/Good-Eatin/src/app/components/footer/footer.component.html
+++ b/Good-Eatin/src/app/components/footer/footer.component.html
@@ -1,3 +1,7 @@
-<p>
-  footer works!
-</p>
+<div class="footer">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
