--- a/Good-Eatin/src/app/components/header/header.component.html
+++ b/Good-Eatin/src/app/components/header/header.component.html
@@ -1,10 +1,9 @@
 <div class="header">
   <a href="#default" class="logo">CompanyLogo</a>
-  <p class="header-title">{{title}}</p>
-  <div ng-if="loggedIn" class="header-right">
+  <div *ngIf="loggedIn == false" class="header-right">
     <a href="#login">Login / SignUp</a>
   </div>
-  <div ng-if="loggedIn == false" class="header-right">
+  <div *ngIf="loggedIn" class="header-right">
     <a href="#calendar">Calendar</a> 
     <a href="#explore">Explore</a> 
     <a href="#profile">Profile</a> 
