--- a/Good-Eatin/src/app/components/footer/footer.component.css
+++ b/Good-Eatin/src/app/components/footer/footer.component.css
@@ -1,5 +1,7 @@
 /* Style the header with a grey background and some padding */
 .footer {
+  display: flex;
+  justify-content: center;
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 20px 10px;
