--- a/Good-Eatin/src/app/pages/login/login.component.html
+++ b/Good-Eatin/src/app/pages/login/login.component.html
@@ -23,6 +23,9 @@
                           Login with Email
                         </button>
                     </div>
+                    <div class="form-group">
+                        <a href="/register" class="logo">Register</a>                         
+                    </div>
                     
 
                     <div class="form-group">
