--- a/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
+++ b/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
@@ -1,3 +1,15 @@
-<p>
-  add-recipe works!
-</p>
+<div class="add-recipe">
+    <form name="recipe-form", method="post" #formCtrl="ngForm">
+        <h3>Recipe</h3>
+        <div class="title">
+            <label for="recipe-title">Name</label>
+            <input type="string" class="form-input" [(ngModel)]="recipe.title" name="title" placeholder="Title" required>
+        </div>
+        <div class="ingredients">
+
+        </div>
+        <div class="instructions">
+            
+        </div>
+    </form>
+</div>
