--- a/Good-Eatin/src/app/pages/calendar/calendar.component.html
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.html
@@ -1,3 +1,31 @@
-<p>
-  calendar works!
-</p>
+<div class="calendar">
+    <div class="header">
+        <a href="/addRecipe">Add a Recipe to Generator</a> 
+        <a href="/editMeals">Edit Recipes in Generator</a> 
+        <a href="/editWeek">Edit Your Week of Meals</a> 
+    </div>
+    <div class="week-view">
+        <div class="day">
+            Sunday
+        </div>
+        <div class="day">
+            Monday
+        </div>
+        <div class="day">
+            Tuesday
+        </div>
+        <div class="day">
+            Wednesday
+        </div>
+        <div class="day">
+            Thursday
+        </div>
+        <div class="day">
+            Friday
+        </div>
+        <div class="day">
+            Saturday
+        </div>
+    </div>
+</div>
+<router-outlet></router-outlet>
