--- a/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
+++ b/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
@@ -1,30 +1,39 @@
+
+
 <div class="add-recipe">
-    <form name="recipe-form" method="post" #formCtrl="ngForm">
+    <form name="recipe-form" method="post" #recipeForm="ngForm" (ngSubmit)="createRecipe(recipeForm)">
         <h3>Recipe</h3>
         <div class="title">
             <label for="recipe-title">Name</label>
             <input type="text" [(ngModel)]="recipe.title" name="title" placeholder="Title" required>
         </div>
         <div class="picture">
-            Add a picture
+            Add a picture <br>
+            <input type="file" ng-model="file.file">
         </div>
-        <div class="ingredients" id="ingredient-container">
+        <div class="ingredients" id="ingredient-container" ng-repeat="n in vm.getNumber(vm.nkeys) track by $index">
             <h5>Ingredients</h5>
             <button (click)="addIngredient()">Add Ingredient</button> 
             <br> <br>
-            <input type="text" name="ingredient[]" placeholder="Sugar"  required>
-            <input type="text" name="amount[]" placeholder="1 Cup" required>
+            <input type="text" ng-model="recipe.ingredient[$index]" placeholder="Sugar"  required>
+            <input type="text" ng-model="recipe.amount[$index]" placeholder="1 Cup" required>
             <br>
         </div>
-        <div class="instructions" id ="instruction-container">
+        <div class="instructions" id ="instruction-container" ng-repeat="n in vm.getNumber(vm.nkeys) track by $index" >
             <h5>Instructions</h5>
             <button (click)="addInstruction()">Add Instruction</button> 
             <br> <br>
-            <input type="text" name="instruction[]" placeholder="Eat chocolate"  required>
+            <input type="text" ng-model="recipe.instruction[$index]" placeholder="Eat chocolate"  required>
             <br>
         </div>
+        <div class="tags" id="recipe-tags"> 
+            <tag-input ng-model="recipe.tags"></tag-input>
+        </div>
+        <div class="private" id="recipe-private">
+            <input type="radio">
+        </div>
         <div class="submit">
-        <button type="submit" (click)="createRecipe()">submit</button>
+        <button type="submit">Submit</button>
         </div>
     </form>
 </div>
