--- a/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
+++ b/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
@@ -9,10 +9,10 @@
         </div>
         <div class="picture">
             Add a picture <br>
-            <input type="file" ng-model="file.file">
+            <input type="file" (change)="addFile($event)">
         </div>
         <h5>Ingredients</h5>
-            <button (click)="addIngredient()" id="add-ingredient">Add Ingredient</button> 
+            <button (click)="addIngredient($event)" id="add-ingredient">Add Ingredient</button> 
             <br> <br>
         <div class="ingredients" id="ingredient-container" *ngFor="let ingredient of ingredients; let i = index">
             <input type="text" [(ngModel)]="ingredient.name" name="name" placeholder="Sugar"  required>
@@ -20,10 +20,10 @@
             <br>
         </div>
         <h5>Instructions</h5>
-            <button (click)="addInstruction()" id="add-instruction">Add Instruction</button> 
+            <button (click)="addInstruction($event)" id="add-instruction">Add Instruction</button> 
             <br> <br>
-        <div class="instructions" id ="instruction-container"  *ngFor="let instruction of instructions">
-            <input type="text" ng-model="instruction.instruction" name="instruction" placeholder="Preheat oven to ..."  required>
+        <div class="instructions" id ="instruction-container"  *ngFor="let instruction of instructions; let i = index">
+            <input type="text" [(ngModel)]="instruction.text" name="instruction" placeholder="Preheat oven to ..."  required>
             <br>
         </div>
         <div class="type" id="recipe-type">
@@ -38,7 +38,7 @@
             <input type="radio" name="isPublic"[(ngModel)]="recipe.isPublic" value="false"> Private <br>
         </div>
         <div class="submit">
-        <button id="submit" (click)="createRecipe()">Submit</button>
+        <button >Submit</button>
         </div>
     </form>
 </div>
