Changes to form and started the edit recipes page

--- a/Good-Eatin/src/app/pages/calendar/calendar.component.html
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <div class="calendar">
     <div class="header">
         <a href="/addRecipe">Add a Recipe to Generator</a> 
-        <a href="/editMeals">Edit Recipes in Generator</a> 
+        <a href="/editMeals">View Recipes in Generator</a> 
         <a href="/editWeek">Edit Your Week of Meals</a> 
     </div>
     <div class="week-view">
