--- a/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.html
+++ b/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.html
@@ -1,3 +1,12 @@
-<p>
-  edit-meals works!
-</p>
+<div class="recipes-container" *ngFor="let recipe of recipeList">
+    <div class="recipe">
+        {{recipe.title}} <br>
+        <img src="recipe.picture" alt="recipe pic">
+        <br>
+        <div class="tags" *ngFor="let tag of recipe.tags">
+            {{tag}}
+        </div>
+    </div>
+
+
+</div>
