Parameter to recipe form through local storage. If auth isn't working, removes uid from local storage.

--- a/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
+++ b/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
@@ -10,6 +10,7 @@
         <div class="picture">
             Add a picture <br>
             <input type="file" (change)="addFile($event)">
+            <img src="recipe.picture" alt="Recipe Picture">
         </div>
         <h5>Ingredients</h5>
             <button (click)="addIngredient($event)" id="add-ingredient">Add Ingredient</button> 
