--- a/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.html
+++ b/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.html
@@ -1,10 +1,10 @@
 <div class="recipes-container" *ngFor="let recipe of recipeList">
-    <div class="recipe">
+    <div class="recipe-container" (click)="recipeClick(recipe.id)">
         {{recipe.title}} <br>
-        <img src="recipe.picture" alt="recipe pic">
+        <img src="{{recipe.picture}}" alt="recipe pic">
         <br>
         <div class="tags" *ngFor="let tag of recipe.tags">
-            {{tag}}
+            <div class="tag">{{tag.display}}</div>
         </div>
     </div>
 
