--- a/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
+++ b/Good-Eatin/src/app/pages/add-recipe/add-recipe.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="add-recipe">
-    <form name="recipe-form" method="post" #recipeForm="ngForm" (ngSubmit)="createRecipe(recipeForm)">
+    <form name="recipe-form" method="post" #recipeForm="ngForm" (ngSubmit)="createRecipe()">
         <h3>Recipe</h3>
         <div class="title">
             <label for="recipe-title">Name</label>
