Added to the calendar page

--- a/Good-Eatin/src/app/pages/landing/landing.component.html
+++ b/Good-Eatin/src/app/pages/landing/landing.component.html
@@ -7,5 +7,5 @@
 </div>
 <h2>Meal plan generator of your deams: </h2>
 
-
+<slideshow [imageUrls]="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwi03ammxLvgAhWLv1QKHWOKDEcQjRx6BAgBEAU&url=http%3A%2F%2Fnechc.com%2Fprograms-services%2Fhealth-promotion%2Fgood-food-box%2F&psig=AOvVaw0xiMrBouiVgETgEkeKeCH-&ust=1550244321668647"></slideshow>
 <router-outlet></router-outlet>
