--- a/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.css
+++ b/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.css
@@ -1,23 +1,26 @@
 .recipes-container {
     font-family: Arial, Helvetica, sans-serif;
-    display: grid;
     width: 95%;
+    display: inline-block;
 }
 
 .recipe-container{
-    width: 10%;
-    align-content: center;
-    background-color: beige;
-    flex-grow: 0;
-    display: inline-block;
-    outline-color: black;
+    border: 1px solid #ccc;
+    width: 180px;
+    height: auto;
 }
 
 .recipe-container:hover {
-    background-color: bisque;
+    border: 1px solid #777
 }
 
 .recipes-container img {
-    width: 70%;
+    width: 100%;
+    height: auto;
 
+}
+
+.tags {
+    background-color: grey;
+    font-size: small;
 }
