--- a/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.html
+++ b/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.html
@@ -1,12 +1,16 @@
+<body>
 <div class="recipes-container" *ngFor="let recipe of recipeList">
     <div class="recipe-container" (click)="recipeClick(recipe.id)">
         {{recipe.title}} <br>
         <img src="{{recipe.picture}}" alt="recipe pic">
         <br>
+        <!--
         <div class="tags" *ngFor="let tag of recipe.tags">
-            <div class="tag">{{tag.display}}</div>
+            {{tag.display}} 
         </div>
+        -->
     </div>
 
 
 </div>
+</body>
