Hosting changes, grid actually works on explore and edit recipes.

--- a/Good-Eatin/src/app/components/footer/footer.component.css
+++ b/Good-Eatin/src/app/components/footer/footer.component.css
@@ -3,21 +3,20 @@
   display: flex;
   justify-content: center;
   overflow: hidden;
-  background-color: #ffff;
+  background-color: #085f73;
   padding: 20px 10px;
 }
 
 /* Style the header links */
 .footer a {
   float: left;
-  color: black;
   text-align: center;
   padding: 12px;
   text-decoration: none;
   font-size: 18px; 
   line-height: 25px;
   border-radius: 4px;
-  color: #085f73;
+  color: #ffffff;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
