--- a/Good-Eatin/src/app/components/header/header.component.html
+++ b/Good-Eatin/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="authService.isLoggedIn()" class="header">
-  <a [routerLink]="['/calendar']" routerLinkActive="router-link-active"  class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Flogo.png?alt=media&token=b16f3fc8-919b-4e2e-bfc8-c7806decea78" alt="logo"></a>
+  <a [routerLink]="['']" routerLinkActive="router-link-active"  class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Flogo.png?alt=media&token=b16f3fc8-919b-4e2e-bfc8-c7806decea78" alt="logo"></a>
   <div  class="header-right">
     <a [routerLink]="['/calendar']" routerLinkActive="router-link-active" >Calendar</a> 
     <a [routerLink]="['/explore']" routerLinkActive="router-link-active" >Explore</a> 
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div *ngIf="authService.isLoggedIn() == false"  class="header">
-  <a [routerLink]="['']" routerLinkActive="router-link-active"  class="logo">CompanyLogo</a>  
+  <a [routerLink]="['']" routerLinkActive="router-link-active"  class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Flogo.png?alt=media&token=b16f3fc8-919b-4e2e-bfc8-c7806decea78" alt="logo"></a>  
   <div class="header-right">
     <a [routerLink]="['/login']" routerLinkActive="router-link-active">Login / SignUp</a>
   </div>
