--- a/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.css
+++ b/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.css
@@ -1,13 +1,18 @@
 .recipes-container {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  Helvetica, sans-serif;
     width: 95%;
-    display: inline-block;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .recipe-container{
     border: 1px solid #ccc;
-    width: 180px;
+    max-width: 180px;
     height: auto;
+    text-align: center;
+    align-self: center;
 }
 
 .recipe-container:hover {
@@ -15,8 +20,11 @@
 }
 
 .recipes-container img {
-    width: 100%;
+    width: 90%;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
