--- a/Good-Eatin/src/app/pages/login/login.component.html
+++ b/Good-Eatin/src/app/pages/login/login.component.html
@@ -14,6 +14,7 @@
 
                   <form name="userform" method="post" #formCtrl="ngForm">
                     <h3>Login</h3>
+                    <h5>{{error}}</h5>
                     <div class="form-group">
                       <label for="Email1">Email address</label>
                       <input type="email" class="form-control" [(ngModel)]="user.email" name="email" placeholder="Email" required>
