--- a/Good-Eatin/src/app/pages/recipe/recipe.component.html
+++ b/Good-Eatin/src/app/pages/recipe/recipe.component.html
@@ -1,6 +1,12 @@
 <div class="recipe">
     <h2 class="title">{{recipe.title}}</h2> 
-    <button *ngIf="isCreator === true" (click)="editButton()">Edit Recipe</button> <br>
+    <button *ngIf="isCreator === true" (click)="editButton()">Edit Recipe</button> 
+     <a *ngFor="let item of starList; let i=index ">  
+        <i *ngIf="item" class="fa fa-star-o"></i>    
+        <i *ngIf="!item" class="fa fa-star"></i>   
+    </a>  {{recipe.averageReview.count}}
+
+    <br>
     <img src="{{recipe.picture}}"> <br>
     <h2> Ingredients </h2>
     <hr>
