--- a/Good-Eatin/src/app/pages/register/register.component.html
+++ b/Good-Eatin/src/app/pages/register/register.component.html
@@ -1,3 +1,46 @@
-<p>
-  register works!
-</p>
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+<div class="main__body">
+  <div class="container">
+
+    <div class="login__page">
+      <div class="row">
+          <div class="card col-md-4 col-md-offset-4">
+            <div class="login__card">
+              <div class="card-block">
+
+                  <form name="userform" method="post" #formCtrl="ngForm">
+                    <h3>Sign Up</h3>
+                    <h5>{{error}}</h5>
+                    <div class="form-group">
+                      <label for="Name1">Name</label>
+                      <input type="text" class="form-control" [(ngModel)]="user.name" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="Email1">Email address</label>
+                      <input type="email" class="form-control" [(ngModel)]="user.email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="Password1">Password</label>
+                      <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Password" required>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="buton" class="btn btn-primary btn-block" style="margin-bottom: 20px" (click)="register()" [disabled]="formCtrl.form.invalid">
+                          Sign-Up
+                        </button>
+                    </div>           
+                  </form>
+                  
+              </div>
+            </div>
+          </div>
+
+      </div>
+    </div> <!-- end card -->
+
+  </div>  <!-- end container -->
+</div> 
