--- a/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.css
+++ b/Good-Eatin/src/app/pages/edit-meals/edit-meals.component.css
@@ -16,9 +16,23 @@
 }
 
 .recipe-container:hover {
-    border: 1px solid #777
+    border: 1px solid #777;
 }
 
+.addButton {
+    background-color: #82c8a0;
+    padding: 4px 12px;  
+    font-size: 12px;
+    border: #168b7e;
+
+}
+
+.removeButton {
+    background-color: #fa5a5a;
+    padding: 4px 12px;  
+    font-size: 12px;
+    border: #a54417;
+}
 .recipes-container img {
     width: 90%;
     height: auto;
